<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore" />

    <item
        android:id="@+id/nav_bookings"
        android:icon="@drawable/ic_bookings"
        android:title="@string/nav_bookings" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>